--- a/pub/adm/css/admin.css
+++ b/pub/adm/css/admin.css
@@ -41,7 +41,7 @@ a{
 }
 
 #header{
-    height: 50px;
+    height: 60px;
     background: linear-gradient(to bottom, #fff 0%, #e0e0e0 70%);
     box-shadow: -8px 8px 10px rgba(0,0,0,.7);
     border: #848484 1px solid;
@@ -51,7 +51,7 @@ a{
     width: 402px;
     height: 52px;
     float: left;
-    padding: 20px 0 0 0;
+    padding: 5px 0 0 0;
 }
 #topmenu {
     background: linear-gradient(to bottom, #9D9D9D 0%, #4E4E4E 70%);
@@ -153,12 +153,12 @@ li.current_page_item a{
 .post-main {
     width: 100%;
     float: right;
-    margin: 0 0 30px 0;
+    margin: 0 0 5px 0;
+    border-bottom: #cdcaca 1px solid;
 }
 .post-main h1 {
-    padding: 5px 0 5px 10px;
     margin: 0;
-    font: normal 24px Verdana, Helvetica, Arial, sans-serif;
+    font: normal 14px Verdana, Helvetica, Arial, sans-serif;
     color: #6699ff;
 }
 .post-main h1 a {
@@ -173,7 +173,7 @@ li.current_page_item a{
 .articles_date{
     display: inline;
     float: right;
-    margin: 5px 5px 0 0;
+    margin: 2px 5px 0 0;
     font: 12px Verdana, Helvetica, Arial, sans-serif;
     color: #646464;
     font-style: italic;
@@ -189,6 +189,7 @@ li.current_page_item a{
 }
 .post {
     padding: 0 5px 10px 10px;
+    border-bottom: #cdcaca 1px solid;
 }
 .post p {
     font: 14px "Helvetica Neue",Helvetica,Arial,sans-serif;
